2001-06-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smicache.in,lib/smi.c: Added a MIB caching scheme: 
	The configuration file may contain the new `cache' statement
	which, in combination with an external caching program like
	smicache, can be used to fetch MIB modules that are not found
	in one of the local directories from any (remote?) resources.
	Note that this is *experimental*!
	
2001-06-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y,check.c: Bill contributed another table check
	and improved two other checks.

	* lib/parser-smi.y: fixed a bug in checkObjects() reported by
	Dave Shield.

2001-05-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-python.c: Keith submitted a patch that turns
	(unordered) index element sets into (ordered) lists. However,
	it might cause other problems.
	
2001-05-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/Makefile.am: renamed parser-*.tab.c to parser-*.c. Harrie
	Hazewinkel reported problems with libtool some systems would
	have otherwise.

2001-04-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* config.sub, config.guess: Updated to recent versions from GNU CVS
	to get it working on PARISC. Thanks to LaMont Jones
	<lamont@smallone.fc.hp.com>.

2001-04-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-xml.c: Fixed DOCTYPE root identifier to contain
	no namespace prefix. Thanks to Andreas Goll.

2001-04-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.16.tar.gz: released version 0.2.16.

	* tools/smilint.c, smiquery.c: fixed obsolete use of the
	optind variable.

	* libsmi-0.2.15.tar.gz: released version 0.2.15.

	* tools/dump-stools.c: Update for stools >= 0.1.16.

2001-04-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed RFC1155-SMI::Counter, Gauge, and
	TimeTicks ranges.

2001-03-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: Fixed a bug on non not-accessible INDEX