@@ -27,3 +27,4 @@ Andreas Goll <Andreas@goll.com>
 LaMont Jones <lamont@smallone.fc.hp.com>
 Harrie Hazewinkel <harrie@covalent.net>
 Dave Shield <D.T.Shield@csc.liv.ac.uk>
+Teemu Koponen <tkoponen@mail.niksula.cs.hut.fi
